<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".activities.DetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_photo"
            android:contentDescription="@string/img_description_poster"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:scaleType="fitXY" />

        <TextView
            android:id="@+id/txt_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_toEndOf="@id/img_photo"
            android:text="@string/lorem"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/label_user_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:layout_below="@id/txt_name"
            android:layout_toEndOf="@id/img_photo"
            android:text="@string/label_user_score" />

        <TextView
            android:id="@+id/txt_user_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_user_score"
            android:layout_marginStart="26dp"
            android:layout_marginTop="4dp"
            android:layout_toEndOf="@id/img_photo"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/lorem" />

        <TextView
            android:id="@+id/label_runtime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:layout_below="@id/txt_user_score"
            android:layout_toEndOf="@id/img_photo"
            android:text="@string/label_runtime" />

        <TextView
            android:id="@+id/txt_runtime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_runtime"
            android:layout_marginStart="26dp"
            android:layout_marginTop="4dp"
            android:layout_toEndOf="@id/img_photo"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/lorem" />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        android:text="@string/label_description" />

    <TextView
        android:id="@+id/txt_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/lorem" />

</LinearLayout>